--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.5",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
