--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "@joi/date": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.33.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
