--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
+    "socket.io": "^4.5.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
