--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
